# imap-thingy

./: .gitignore  CHANGELOG.md  README.md  mise.toml  pyproject.toml  pytest.ini
.github/workflows/: code_quality.yml
imap_thingy/: __init__.py  accounts.py  events_handler.py  get_mail.py  idle_monitor.py  logging.py  utils.py
imap_thingy/accounts/: __init__.py  account.py  presets.py  utils.py
imap_thingy/core/: __init__.py  flags.py  imap_query.py  message.py  path.py
imap_thingy/filters/: __init__.py  basic_filters.py  criterion.py  criterion_filter.py  duplicate.py  duplicate_filter.py  filter.py  interfaces.py  utils.py
imap_thingy/filters/actions/: __init__.py  action.py  base.py  delete.py  flags.py  imap.py  move.py  noop.py
imap_thingy/filters/criteria/: __init__.py  address.py  base.py  body.py  criterion.py  date.py  duplicate.py  flags.py  subject.py
tests/: README.md  __init__.py  conftest.py  test_actions.py  test_criteria.py  test_filters.py  test_folder.py  test_imap_query.py  test_utils.py
