[project]
name = "imap-thingy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imapclient>=3.0.1",
    "mail-parser>=4.1.3",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "D", "ANN"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"backend/config.py" = ["N802", "D102"]
