[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[project]
name = "imap-thingy"
version = "0.3.0"
description = "An IMAP scripting library for creating advanced email filters and automation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imapclient>=3.1.0",
    "mail-parser>=4.1.4",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [ "imapclient.*", "mailparser.*" ]
ignore_missing_imports = true

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "D", "ANN"]
ignore = ["D203", "D213", "D105"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
